# GPU-Ed25519-Curve25519-pubkey-vanity-prefix-and-suffix

./: .gitignore  BUILD_INSTRUCTIONS_EN.md  BUILD_INSTRUCTIONS_RU.md  CMakeLists.txt  README.md  build.bat  build_log.txt  pyproject.toml
py/: debug_sha256_input.py  debug_suffix.py  debug_wireformat.py  generate_match_tests.py  main.py  verify_seed.py
src/: config.h  ed25519.cuh  fingerprint_match.cuh  generate_precomp.py  main.cu  openssh_format.h  precomp_5bit.h  precomp_7bit.h  precomp_8bit.h  sha256.cuh  sha512.cuh  test_kernels.cu
tests/: test_vectors.py
